--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 
       <!-- Person 2 -->
       <div class="person">
-        <a href="https://example.com/portfolio/person2" class="avatar" target="_blank" rel="noopener">
+        <a href="https://vardhan-0016.github.io/vardhan-portfolio.github.io/" class="avatar" target="_blank" rel="noopener">
           <img src="vardhan.jpg" alt="Person 2 portrait" />
         </a>
-        <a href="https://example.com/portfolio/person2" target="_blank" rel="noopener" class="name">D.S.Vardhan</a>
+        <a href="https://vardhan-0016.github.io/vardhan-portfolio.github.io/" target="_blank" rel="noopener" class="name">D.S.Vardhan</a>
       </div>
 
       <!-- Person 3 -->
