--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
 
       <!-- Person 4 -->
       <div class="person">
-        <a href="https://example.com/portfolio/person4" class="avatar" target="_blank" rel="noopener">
+        <a href="https://mahi-kalyani.github.io/" class="avatar" target="_blank" rel="noopener">
           <img src="mahi.jpeg" alt="Person 4 portrait" />
         </a>
-        <a href="https://example.com/portfolio/person4" target="_blank" rel="noopener" class="name">G.Mahi Kalyani</a>
+        <a href="https://mahi-kalyani.github.io/" target="_blank" rel="noopener" class="name">G.Mahi Kalyani</a>
       </div>
 
       <!-- Person 5 -->
