--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
 
       <!-- Person 5 -->
       <div class="person">
-        <a href="https://example.com/portfolio/person5" class="avatar" target="_blank" rel="noopener">
+        <a href="https://aneesha-rokkala.github.io/aneesha.github.io/" class="avatar" target="_blank" rel="noopener">
           <img src="aneesha.jpeg" alt="Person 5 portrait" />
         </a>
-        <a href="https://example.com/portfolio/person5" target="_blank" rel="noopener" class="name">R.Aneesha</a>
+        <a href="https://aneesha-rokkala.github.io/aneesha.github.io/" target="_blank" rel="noopener" class="name">R.Aneesha</a>
       </div>
     </section>
   </main>
