--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <!-- Person 5 -->
       <div class="person">
         <a href="https://aneesha-rokkala.github.io/aneesha.github.io/" class="avatar" target="_blank" rel="noopener">
-          <img src="aneesha.jpeg" alt="Person 5 portrait" />
+          <img src="anee.jpeg" alt="Person 5 portrait" />
         </a>
         <a href="https://aneesha-rokkala.github.io/aneesha.github.io/" target="_blank" rel="noopener" class="name">R.Aneesha</a>
       </div>
