--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
     <section class="people-grid" aria-label="Team Portfolios">
       <!-- Person 1 -->
       <div class="person">
-    <a href="https://manohar-rks.github.io/portfolio-website/" class="avatar" target="_blank" rel="noopener">
+    <a href="https://manohar-rks.github.io/" class="avatar" target="_blank" rel="noopener">
     <img src="mannu.jpeg" alt="Person 1 portrait" />
     </a>
-    <a href="https://manohar-rks.github.io/portfolio-website/" target="_blank" rel="noopener" class="name">Manohar.R.K.S</a>
+    <a href="https://manohar-rks.github.io//" target="_blank" rel="noopener" class="name">Manohar.R.K.S</a>
     </div>
 
 
